- https://github.com/eclipse-syson/syson/issues/1007[#1007] Improve direct edit on Feature elements to be able to set the `isDefault` and `isInitial` properties
- https://github.com/eclipse-syson/syson/issues/1033[#1033] [explorer] Make it possible to create a diagram representation directly under a `root Namespace` element

=== New features


== v2025.2.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/987[#987] Implementation of drag and drop in SysOn Explorer view
* A new service has been added to centralize the behavior of moving semantic elements in _org.eclipse.syson.services.api.ISysMLMoveElementService_.
It replaces the public methods _UtilService.moveMembership_ and _ToolService.moveSemanticElement_
* A new service has been added to centralize the verification of read-only elements in _org.eclipse.syson.services.api.ISysMLReadOnlyService_.
- https://github.com/eclipse-syson/syson/issues/1018[#1018] `SysMLStandardLibrariesConfiguration` has been refactored and renamed `SysONDefaultLibrariesConfiguration`.

=== Dependency update

- Switch to Sirius Web 2025.2.0
- https://github.com/eclipse-syson/syson/issues/953[#953] [rest-apis] Backend module `syson-sysml-rest-api-services` now depends on `jackson-datatype-jsr310` for JSON dates serialization
- https://github.com/eclipse-syson/syson/issues/1023[#1023] [releng] Switch to SysIDE 0.8.0
- Upgrade `turbo` to version 2.3.3
- Switch to Spring Boot 3.4.1

=== Bug fixes

- https://github.com/eclipse-syson/syson/issues/953[#953] [rest-apis] Fix an issue where the server could crash when successive REST APIs calls are executed.
More precisely, the dates fields were not serialized correctly.
- https://github.com/eclipse-syson/syson/issues/961[#961] [core] Fix an issue where default names of Elements were sometimes invalid because corresponding to SysMLv2 keywords.
New default names now includes a number, this number corresponding to the count of Elements of the same kind in the scope.