@@ -1228,6 +1228,29 @@ public class ViewToolService extends ToolService {
     }
 
     /**
+     * Provides the root elements in the tree of the selection dialog for the SubjectParameter creation tool.
+     *
+     * @param editingContext
+     *            the (non-{@code null}) {@link IEditingContext}.
+     * @return the (non-{@code null}) {@link List} of all {@link Resource} that contain at least one {@link Type}.
+     */
+    public List<Resource> getSubjectSelectionDialogElements(IEditingContext editingContext) {
+        return this.getAllResourcesWithInstancesOf(editingContext, SysmlPackage.eINSTANCE.getUsage());
+    }
+
+    /**
+     * Provides the children of element in the tree of the selection dialog for the SubjectParameter creation tool.
+     *
+     * @param selectionDialogTreeElement
+     *            a (non-{@code null}) selection dialog tree element.
+     * @return the (non-{@code null}) {@link List} of all children that contain (possibly indirectly) or are
+     *         {@link Usage}.
+     */
+    public List<? extends Object> getSubjectSelectionDialogChildren(Object selectionDialogTreeElement) {
+        return this.getChildrenWithInstancesOf(selectionDialogTreeElement, SysmlPackage.eINSTANCE.getUsage());
+    }
+
+    /**
      * Provides the root elements in the tree of the selection dialog for the ActorParameter creation tool.
      *
      * @param editingContext
